environment further developed

--- a/config/config_template.json
+++ b/config/config_template.json
@@ -34,7 +34,11 @@
     },
     {
       "name": "UserAgent",
-      "type": "user"
+      "type": "user",
+      "balance": {
+          "testToken": 1000,
+          "anotherToken": 1500
+      }
     }
   ],
   "trainer": {
