enabled use of multiple governance agents

--- a/config/default_config.json
+++ b/config/default_config.json
@@ -18,28 +18,56 @@
       }
     ]
   },
-  "lending_protocol": {
-    "plf_pool": [
+  "lending_protocol": [
       {
-        "token_name": "TKN",
-        "initial_starting_funds": 5000,
-        "collateral_factor": 0.85
-      },
-      {
-        "token_name": "USDC",
-        "initial_starting_funds": 150000,
-        "collateral_factor": 0.85
-      },
-      {
-        "token_name": "WETH",
-        "initial_starting_funds": 15000,
-        "collateral_factor": 0.85
-      }
-    ]
-  },
+        "name": "lending_protocol_1",
+        "plf_pool": [
+          {
+            "token_name": "TKN",
+            "initial_starting_funds": 5000,
+            "collateral_factor": 0.85
+          },
+          {
+            "token_name": "USDC",
+            "initial_starting_funds": 150000,
+            "collateral_factor": 0.85
+          },
+          {
+            "token_name": "WETH",
+            "initial_starting_funds": 15000,
+            "collateral_factor": 0.85
+          }
+        ]
+    },
+    {
+        "name": "lending_protocol_2",
+        "plf_pool": [
+          {
+            "token_name": "TKN",
+            "initial_starting_funds": 5000,
+            "collateral_factor": 0.85
+          },
+          {
+            "token_name": "USDC",
+            "initial_starting_funds": 150000,
+            "collateral_factor": 0.85
+          }
+        ]
+    }
+  ],
   "agent": [
     {
-      "name": "GovAgent",
+      "name": "GovAgent1",
+      "protocol": "lending_protocol_1",
+      "type": "governance",
+      "reward": [[1, "protocol_revenue"]],
+      "lr": 0.01,
+      "hidden_dim": 64,
+      "onehot_dim": 0
+    },
+    {
+      "name": "GovAgent2",
+      "protocol": "lending_protocol_2",
       "type": "governance",
       "reward": [[1, "protocol_revenue"]],
       "lr": 0.01,
@@ -61,7 +89,7 @@
     }
   ],
   "parameter": {
-    "n_rollout_threads": 4,
+    "n_rollout_threads": 1,
     "buffer_length": 4096,
     "n_episodes": 100,
     "episode_length": 128,
