added opportunity cost reward funcion

--- a/config/default_config.json
+++ b/config/default_config.json
@@ -77,7 +77,7 @@
     {
       "name": "UserAgent",
       "type": "user",
-      "reward": [[1,"maximum_exposure"]],
+      "reward": [[1,"opportunity_cost"]],
       "lr": 0.01,
       "hidden_dim": 64,
       "onehot_dim": 0,
