--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -56,18 +56,9 @@
       "onehot_dim": 0
     },
     {
-      "name": "GovAgent2",
-      "protocol": "lending_protocol_2",
-      "type": "governance",
-      "reward": [[1, "profit"]],
-      "lr": 0.01,
-      "hidden_dim": 64,
-      "onehot_dim": 0
-    },
-    {
       "name": "UserAgent",
       "type": "user",
-      "reward": [[0.5, "maximum_exposure"], [0.5, "profit"]],
+      "reward": [[1, "opportunity_cost"]],
       "lr": 0.01,
       "hidden_dim": 64,
       "onehot_dim": 0,
@@ -81,8 +72,8 @@
   "parameter": {
     "n_rollout_threads": 12,
     "buffer_length": 2048,
-    "n_episodes": 20020,
-    "episode_length": 128,
+    "n_episodes": 5000,
+    "episode_length": 100,
     "batch_size": 1024,
     "save_interval": 2500,
     "attend_heads": 4,
