typo in config file

--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -49,7 +49,7 @@
       "onehot_dim": 0,
       "balance": {
         "TKN": 10000,
-        "USDC": 10000,
+        "USDC": 10000
       }
     }
   ],
