--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -36,7 +36,7 @@
       "protocol": "lending_protocol_1",
       "type": "governance",
       "reward": [[1, "profit"]],
-      "lr": 0.05,
+      "lr": 0.01,
       "hidden_dim": 128,
       "onehot_dim": 0
     },
@@ -44,7 +44,7 @@
       "name": "UserAgent1",
       "type": "user",
       "reward": [[1, "supply_exposure"]],
-      "lr": 0.05,
+      "lr": 0.01,
       "hidden_dim": 128,
       "onehot_dim": 0,
       "balance": {
@@ -56,7 +56,7 @@
       "name": "UserAgent2",
       "type": "user",
       "reward": [[1, "borrow_exposure"]],
-      "lr": 0.05,
+      "lr": 0.01,
       "hidden_dim": 128,
       "onehot_dim": 0,
       "balance": {
@@ -68,12 +68,13 @@
   "parameter": {
     "n_rollout_threads": 12,
     "buffer_length": 10000,
-    "n_episodes": 8050,
+    "n_episodes": 25050,
     "episode_length": 32,
     "batch_size": 1024,
     "num_updates": 8,
     "save_interval": 2000,
     "attend_heads": 4,
+    "gamma": 0.1,
     "reward_scale": 1e-4,
     "seed": 25
   }
