--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -43,12 +43,7 @@
     {
       "name": "UserAgent1",
       "type": "user",
-      "reward": [
-        [
-          1,
-          "supply_exposure"
-        ]
-      ],
+      "reward": [[1, "borrow_exposure"]],
       "lr": 0.01,
       "hidden_dim": 128,
       "onehot_dim": 0,
@@ -59,7 +54,7 @@
     }
   ],
   "parameter": {
-    "n_rollout_threads": 1,
+    "n_rollout_threads": 12,
     "buffer_length": 10000,
     "n_episodes": 10050,
     "episode_length": 32,
