--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -35,7 +35,7 @@
       "name": "GovAgent1",
       "protocol": "lending_protocol_1",
       "type": "governance",
-      "reward": [[1, "profit"]],
+      "reward": [[1, "protocol_revenue"]],
       "lr": 0.01,
       "hidden_dim": 128,
       "onehot_dim": 0
@@ -62,7 +62,7 @@
     "num_updates": 4,
     "save_interval": 1000,
     "attend_heads": 4,
-    "gamma": 0.1,
+    "gamma": 0,
     "reward_scale": 1e-4,
     "seed": 25
   }
