--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -43,7 +43,7 @@
     {
       "name": "UserAgent1",
       "type": "user",
-      "reward": [[1, "opportunity_cost_supply_exposure"]],
+      "reward": [[1, "supply_exposure"]],
       "lr": 0.01,
       "hidden_dim": 128,
       "onehot_dim": 0,
@@ -62,7 +62,7 @@
     "num_updates": 4,
     "save_interval": 1000,
     "attend_heads": 4,
-    "gamma": 0,
+    "gamma": 0.9,
     "reward_scale": 1e-4,
     "seed": 25
   }
