--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -43,7 +43,7 @@
     {
       "name": "UserAgent1",
       "type": "user",
-      "reward": [[1, "opportunity_cost_supply_exposure"]],
+      "reward": [[1, "supply_exposure"]],
       "lr": 0.01,
       "hidden_dim": 128,
       "onehot_dim": 0,
@@ -56,7 +56,7 @@
   "parameter": {
     "n_rollout_threads": 12,
     "buffer_length": 10000,
-    "n_episodes": 1050,
+    "n_episodes": 50050,
     "episode_length": 64,
     "batch_size": 1024,
     "num_updates": 4,
