large training sessions

--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -10,6 +10,11 @@
         "name": "USDC",
         "price": 100,
         "asset_volatility": 0.1
+      },
+      {
+        "name": "BTC",
+        "price": 100,
+        "asset_volatility": 0.05
       }
     ]
   },
@@ -24,6 +29,31 @@
         },
         {
           "token_name": "USDC",
+          "initial_starting_funds": 10000,
+          "collateral_factor": 0.85
+        },
+        {
+          "token_name": "BTC",
+          "initial_starting_funds": 10000,
+          "collateral_factor": 0.85
+        }
+      ]
+    },
+    {
+      "name": "lending_protocol_2",
+      "plf_pool": [
+        {
+          "token_name": "TKN",
+          "initial_starting_funds": 10000,
+          "collateral_factor": 0.85
+        },
+        {
+          "token_name": "USDC",
+          "initial_starting_funds": 10000,
+          "collateral_factor": 0.85
+        },
+        {
+          "token_name": "BTC",
           "initial_starting_funds": 10000,
           "collateral_factor": 0.85
         }
@@ -41,9 +71,30 @@
       "onehot_dim": 0
     },
     {
+      "name": "GovAgent2",
+      "protocol": "lending_protocol_2",
+      "type": "governance",
+      "reward": [[1, "protocol_revenue"]],
+      "lr": 1e-5,
+      "hidden_dim": 128,
+      "onehot_dim": 0
+    },
+    {
       "name": "UserAgent1",
       "type": "user",
-      "reward": [[1, "supply_exposure"]],
+      "reward": [[1, "opportunity_cost"]],
+      "lr": 1e-5,
+      "hidden_dim": 128,
+      "onehot_dim": 0,
+      "balance": {
+        "TKN": 0,
+        "USDC": 10000
+      }
+    },
+    {
+      "name": "UserAgent2",
+      "type": "user",
+      "reward": [[1, "opportunity_cost"]],
       "lr": 1e-5,
       "hidden_dim": 128,
       "onehot_dim": 0,
@@ -58,7 +109,7 @@
     "buffer_length": 2048,
     "n_episodes": 30050,
     "episode_length": 25,
-    "batch_size": 128,
+    "batch_size": 256,
     "num_updates": 4,
     "save_interval": 5000,
     "attend_heads": 4,
