--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -10,11 +10,6 @@
         "name": "USDC",
         "price": 100,
         "asset_volatility": 0.1
-      },
-      {
-        "name": "BTC",
-        "price": 100,
-        "asset_volatility": 0.05
       }
     ]
   },
@@ -31,31 +26,6 @@
           "token_name": "USDC",
           "initial_starting_funds": 10000,
           "collateral_factor": 0.85
-        },
-        {
-          "token_name": "BTC",
-          "initial_starting_funds": 10000,
-          "collateral_factor": 0.85
-        }
-      ]
-    },
-    {
-      "name": "lending_protocol_2",
-      "plf_pool": [
-        {
-          "token_name": "TKN",
-          "initial_starting_funds": 10000,
-          "collateral_factor": 0.85
-        },
-        {
-          "token_name": "USDC",
-          "initial_starting_funds": 10000,
-          "collateral_factor": 0.85
-        },
-        {
-          "token_name": "BTC",
-          "initial_starting_funds": 10000,
-          "collateral_factor": 0.85
         }
       ]
     }
@@ -66,36 +36,15 @@
       "protocol": "lending_protocol_1",
       "type": "governance",
       "reward": [[1, "protocol_revenue"]],
-      "lr": 1e-5,
-      "hidden_dim": 128,
-      "onehot_dim": 0
-    },
-    {
-      "name": "GovAgent2",
-      "protocol": "lending_protocol_2",
-      "type": "governance",
-      "reward": [[1, "protocol_revenue"]],
-      "lr": 1e-5,
+      "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0
     },
     {
       "name": "UserAgent1",
       "type": "user",
-      "reward": [[1, "opportunity_cost"]],
-      "lr": 1e-5,
-      "hidden_dim": 128,
-      "onehot_dim": 0,
-      "balance": {
-        "TKN": 0,
-        "USDC": 10000
-      }
-    },
-    {
-      "name": "UserAgent2",
-      "type": "user",
-      "reward": [[1, "opportunity_cost"]],
-      "lr": 1e-5,
+      "reward": [[1, "supply_exposure"]],
+      "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0,
       "balance": {
@@ -107,7 +56,7 @@
   "parameter": {
     "n_rollout_threads": 12,
     "buffer_length": 2048,
-    "n_episodes": 30050,
+    "n_episodes": 10050,
     "episode_length": 25,
     "batch_size": 256,
     "num_updates": 4,
@@ -115,9 +64,9 @@
     "attend_heads": 4,
     "gamma": 0.9,
     "reward_scale": 1e-2,
-    "seed": 69,
-    "pi_lr": 1e-5,
-    "q_lr": 1e-5,
+    "seed": 1,
+    "pi_lr": 1e-4,
+    "q_lr": 1e-4,
     "tau": 0.001
   }
 }
