--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -54,7 +54,7 @@
     }
   ],
   "parameter": {
-    "n_rollout_threads": 12,
+    "n_rollout_threads": 1,
     "buffer_length": 2048,
     "n_episodes": 2050,
     "episode_length": 25,
@@ -63,7 +63,7 @@
     "save_interval": 500,
     "attend_heads": 4,
     "gamma": 0.9,
-    "reward_scale": 1e-4,
+    "reward_scale": 1e+4,
     "seed": 1,
     "pi_lr": 1e-4,
     "q_lr": 1e-4,
