--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -43,24 +43,24 @@
     {
       "name": "UserAgent1",
       "type": "user",
-      "reward": [[1, "supply_exposure"]],
+      "reward": [[1, "opportunity_cost_supply_exposure"]],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0,
       "balance": {
         "TKN": 0,
-        "USDC": 10000
+        "USDC": 100000
       }
     }
   ],
   "parameter": {
-    "n_rollout_threads": 12,
+    "n_rollout_threads": 4,
     "buffer_length": 2048,
     "n_episodes": 2050,
     "episode_length": 25,
     "batch_size": 256,
     "num_updates": 4,
-    "save_interval": 500,
+    "save_interval": 5000,
     "attend_heads": 4,
     "gamma": 0.9,
     "reward_scale": 1e+4,
