added borrow user

--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -51,6 +51,18 @@
         "TKN": 1000,
         "USDC": 1000
       }
+    },
+    {
+      "name": "UserAgent2",
+      "type": "user",
+      "reward": [[1, "borrow_opportunity_cost"]],
+      "lr": 1e-4,
+      "hidden_dim": 128,
+      "onehot_dim": 0,
+      "balance": {
+        "TKN": 1000,
+        "USDC": 1000
+      }
     }
   ],
   "parameter": {
