--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -28,21 +28,7 @@
           "collateral_factor": 0.85
         }
       ]
-    },
-    {
-      "name": "lending_protocol_2",
-      "plf_pool": [
-        {
-          "token_name": "TKN",
-          "initial_starting_funds": 10000,
-          "collateral_factor": 0.85
-        },
-        {
-          "token_name": "USDC",
-          "initial_starting_funds": 10000,
-          "collateral_factor": 0.85
-        }
-      ]
+    }
     }
   ],
   "agent": [
@@ -50,16 +36,7 @@
       "name": "GovAgent1",
       "protocol": "lending_protocol_1",
       "type": "governance",
-      "reward": [[1, "profit"]],
-      "lr": 1e-4,
-      "hidden_dim": 128,
-      "onehot_dim": 0
-    },
-    {
-      "name": "GovAgent2",
-      "protocol": "lending_protocol_2",
-      "type": "governance",
-      "reward": [[1, "profit"]],
+      "reward": [[1, "borrow_exposure"]],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0
