--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -48,8 +48,8 @@
       "hidden_dim": 128,
       "onehot_dim": 0,
       "balance": {
-        "TKN": 10000000,
-        "USDC": 0
+        "TKN": 10000,
+        "USDC": 10000
       }
     }
   ],
