--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -41,6 +41,15 @@
       "onehot_dim": 0
     },
     {
+      "name": "GovAgent1",
+      "protocol": "lending_protocol_1",
+      "type": "governance",
+      "reward": [[1, "maximal_borrow_exposure"]],
+      "lr": 1e-4,
+      "hidden_dim": 128,
+      "onehot_dim": 0
+    },
+    {
       "name": "UserAgent1",
       "type": "user",
       "reward": [[1, "borrow_opportunity_cost"]],
@@ -48,8 +57,8 @@
       "hidden_dim": 128,
       "onehot_dim": 0,
       "balance": {
-        "TKN": 10000,
-        "USDC": 10000
+        "TKN": 1000,
+        "USDC": 0
       }
     }
   ],
