--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -28,21 +28,6 @@
           "collateral_factor": 0.85
         }
       ]
-    },
-    {
-      "name": "lending_protocol_2",
-      "plf_pool": [
-        {
-          "token_name": "TKN",
-          "initial_starting_funds": 10000,
-          "collateral_factor": 0.85
-        },
-        {
-          "token_name": "USDC",
-          "initial_starting_funds": 10000,
-          "collateral_factor": 0.85
-        }
-      ]
     }
   ],
   "agent": [
@@ -56,18 +41,9 @@
       "onehot_dim": 0
     },
     {
-      "name": "GovAgent2",
-      "protocol": "lending_protocol_2",
-      "type": "governance",
-      "reward": [[1, "maximal_borrow_exposure"]],
-      "lr": 1e-4,
-      "hidden_dim": 128,
-      "onehot_dim": 0
-    },
-    {
       "name": "UserAgent1",
       "type": "user",
-      "reward": [[1, "borrow_opportunity_cost"]],
+      "reward": [[1, "borrow_exposure"]],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0,
@@ -78,7 +54,7 @@
     }
   ],
   "parameter": {
-    "n_rollout_threads": 1,
+    "n_rollout_threads": 12,
     "buffer_length": 2048,
     "n_episodes": 2020,
     "episode_length": 25,
