--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -35,7 +35,7 @@
       "name": "GovAgent1",
       "protocol": "lending_protocol_1",
       "type": "governance",
-      "reward": [[1, "maximal_borrow_exposure"]],
+      "reward": [[1, "profit"]],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0
@@ -43,13 +43,13 @@
     {
       "name": "UserAgent1",
       "type": "user",
-      "reward": [[1, "borrow_exposure"]],
+      "reward": [[1, "supply_opportunity_cost"]],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0,
       "balance": {
-        "TKN": 1000,
-        "USDC": 0
+        "TKN": 0,
+        "USDC": 1000
       }
     }
   ],
