--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -50,7 +50,7 @@
       "name": "GovAgent1",
       "protocol": "lending_protocol_1",
       "type": "governance",
-      "reward": [[1, "profit"]],
+      "reward": [[0.5, "profit"], [0.5, "maximal_borrow_exposure"]],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0
@@ -59,7 +59,7 @@
       "name": "GovAgent2",
       "protocol": "lending_protocol_2",
       "type": "governance",
-      "reward": [[1, "profit"]],
+      "reward": [[0.5, "profit"], [0.5, "maximal_borrow_exposure"]],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0
@@ -74,6 +74,17 @@
       "balance": {
         "TKN": 0,
         "USDC": 1000
+      },
+      {
+      "name": "UserAgent1",
+      "type": "user",
+      "reward": [[1, "borrow_opportunity_cost"]],
+      "lr": 1e-4,
+      "hidden_dim": 128,
+      "onehot_dim": 0,
+      "balance": {
+        "TKN": 1000,
+        "USDC": 0
       }
     }
   ],
