--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -67,15 +67,21 @@
     {
       "name": "UserAgent1",
       "type": "user",
-      "reward": [[1, "supply_opportunity_cost"]],
+      "reward": [
+        [
+          1,
+          "supply_opportunity_cost"
+        ]
+      ],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0,
       "balance": {
         "TKN": 0,
         "USDC": 1000
-      },
-      {
+      }
+    },
+    {
       "name": "UserAgent1",
       "type": "user",
       "reward": [[1, "borrow_opportunity_cost"]],
