--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -28,21 +28,6 @@
           "collateral_factor": 0.85
         }
       ]
-    },
-    {
-      "name": "lending_protocol_2",
-      "plf_pool": [
-        {
-          "token_name": "TKN",
-          "initial_starting_funds": 10000,
-          "collateral_factor": 0.85
-        },
-        {
-          "token_name": "USDC",
-          "initial_starting_funds": 10000,
-          "collateral_factor": 0.85
-        }
-      ]
     }
   ],
   "agent": [
@@ -50,16 +35,7 @@
       "name": "GovAgent1",
       "protocol": "lending_protocol_1",
       "type": "governance",
-      "reward": [[0.5, "profit"], [0.5, "maximal_borrow_exposure"]],
-      "lr": 1e-4,
-      "hidden_dim": 128,
-      "onehot_dim": 0
-    },
-    {
-      "name": "GovAgent2",
-      "protocol": "lending_protocol_2",
-      "type": "governance",
-      "reward": [[0.5, "profit"], [0.5, "maximal_borrow_exposure"]],
+      "reward": [[1, "maximal_borrow_exposure"]],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0
@@ -67,19 +43,7 @@
     {
       "name": "UserAgent1",
       "type": "user",
-      "reward": [[1, "supply_opportunity_cost"]],
-      "lr": 1e-4,
-      "hidden_dim": 128,
-      "onehot_dim": 0,
-      "balance": {
-        "TKN": 0,
-        "USDC": 1000
-      }
-    },
-    {
-      "name": "UserAgent1",
-      "type": "user",
-      "reward": [[1, "borrow_opportunity_cost"]],
+      "reward": [[1, "borrow_exposure"]],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0,
