--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -50,7 +50,7 @@
       "name": "GovAgent1",
       "protocol": "lending_protocol_1",
       "type": "governance",
-      "reward": [[1, "borrow_interest_rate"]],
+      "reward": [[1, "profit"]],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0
@@ -59,7 +59,7 @@
       "name": "GovAgent2",
       "protocol": "lending_protocol_2",
       "type": "governance",
-      "reward": [[1, "borrow_interest_rate"]],
+      "reward": [[1, "profit"]],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0
@@ -72,8 +72,8 @@
       "hidden_dim": 128,
       "onehot_dim": 0,
       "balance": {
-        "TKN": 0,
-        "USDC": 1000
+        "TKN": 100000,
+        "USDC": 0
       }
     }
   ],
@@ -86,7 +86,7 @@
     "num_updates": 4,
     "save_interval": 500,
     "attend_heads": 4,
-    "gamma": 0.9,
+    "gamma": 0.1,
     "reward_scale": 1e+4,
     "seed": 1,
     "pi_lr": 1e-4,
