re-run session 3

--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -67,7 +67,7 @@
     {
       "name": "UserAgent1",
       "type": "user",
-      "reward": [[1, "borrow_opportunity_cost"]],
+      "reward": [[1, "supply_opportunity_cost"]],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0,
