reset the environment config

--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -5,6 +5,11 @@
         "name": "TKN",
         "price": 100,
         "asset_volatility": 0.2
+      },
+      {
+        "name": "USDC",
+        "price": 100,
+        "asset_volatility": 0.1
       }
     ]
   },
@@ -14,6 +19,26 @@
       "plf_pool": [
         {
           "token_name": "TKN",
+          "initial_starting_funds": 10000,
+          "collateral_factor": 0.85
+        },
+        {
+          "token_name": "USDC",
+          "initial_starting_funds": 10000,
+          "collateral_factor": 0.85
+        }
+      ]
+    },
+    {
+      "name": "lending_protocol_2",
+      "plf_pool": [
+        {
+          "token_name": "TKN",
+          "initial_starting_funds": 10000,
+          "collateral_factor": 0.85
+        },
+        {
+          "token_name": "USDC",
           "initial_starting_funds": 10000,
           "collateral_factor": 0.85
         }
@@ -31,14 +56,24 @@
       "onehot_dim": 0
     },
     {
+      "name": "GovAgent2",
+      "protocol": "lending_protocol_2",
+      "type": "governance",
+      "reward": [[1, "profit"]],
+      "lr": 1e-4,
+      "hidden_dim": 128,
+      "onehot_dim": 0
+    },
+    {
       "name": "UserAgent1",
       "type": "user",
-      "reward": [[1, "supply_opportunity_cost"]],
+      "reward": [[1, "borrow_opportunity_cost"]],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0,
       "balance": {
-        "TKN": 25000
+        "TKN": 1000,
+        "USDC": 1000
       }
     }
   ],
@@ -58,4 +93,3 @@
     "q_lr": 1e-4,
     "tau": 0.001
   }
-}
