--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -67,13 +67,13 @@
     {
       "name": "UserAgent1",
       "type": "user",
-      "reward": [[1, "borrow_opportunity_cost"]],
+      "reward": [[1, "supply_opportunity_cost"]],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0,
       "balance": {
-        "TKN": 1000,
-        "USDC": 1000
+        "TKN": 0,
+        "USDC": 25000
       }
     }
   ],
