--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -50,7 +50,12 @@
       "name": "GovAgent1",
       "protocol": "lending_protocol_1",
       "type": "governance",
-      "reward": [[1, "profit"]],
+      "reward": [
+        [
+          1,
+          "profit"
+        ]
+      ],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0
@@ -59,7 +64,12 @@
       "name": "GovAgent2",
       "protocol": "lending_protocol_2",
       "type": "governance",
-      "reward": [[1, "profit"]],
+      "reward": [
+        [
+          1,
+          "profit"
+        ]
+      ],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0
@@ -67,7 +77,12 @@
     {
       "name": "UserAgent1",
       "type": "user",
-      "reward": [[1, "supply_opportunity_cost"]],
+      "reward": [
+        [
+          1,
+          "supply_opportunity_cost"
+        ]
+      ],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0,
@@ -93,3 +108,4 @@
     "q_lr": 1e-4,
     "tau": 0.001
   }
+}
