rerun session 3 with different starting balance

--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -80,15 +80,15 @@
       "reward": [
         [
           1,
-          "borrow_opportunity_cost"
+          "supply_opportunity_cost"
         ]
       ],
       "lr": 1e-4,
       "hidden_dim": 128,
       "onehot_dim": 0,
       "balance": {
-        "TKN": 10000,
-        "USDC": 10000
+        "TKN": 100000,
+        "USDC": 100000
       }
     }
   ],
