--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -52,7 +52,7 @@
       "type": "governance",
       "reward": [
         [
-          100,
+          1,
           "profit"
         ]
       ],
@@ -66,7 +66,7 @@
       "type": "governance",
       "reward": [
         [
-          100,
+          1,
           "profit"
         ]
       ],
@@ -88,7 +88,7 @@
       "onehot_dim": 0,
       "balance": {
         "TKN": 0,
-        "USDC": 100000
+        "USDC": 1000000
       }
     }
   ],
