--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -88,7 +88,7 @@
       "onehot_dim": 0,
       "balance": {
         "TKN": 0,
-        "USDC": 1000000
+        "USDC": 100000
       }
     }
   ],
