re-run session 2

--- a/config/simplified_config.json
+++ b/config/simplified_config.json
@@ -51,7 +51,7 @@
       "reward": [
         [
           1,
-          "supply_exposure"
+          "supply_opportunity_cost"
         ]
       ],
       "lr": 1e-4,
